Add validation, add color and harvest strategy.

--- a/Tree1651PJ/TreeManagerConsoleApp.csproj
+++ b/Tree1651PJ/TreeManagerConsoleApp.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="utils\NewFile1.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClassLibrary\TreeClassLibrary.csproj" />
   </ItemGroup>
 
