Modify terminal interface, validation and using table

--- a/Tree1651PJ/TreeManagerConsoleApp.csproj
+++ b/Tree1651PJ/TreeManagerConsoleApp.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTables" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClassLibrary\TreeClassLibrary.csproj" />
   </ItemGroup>
 
